--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 html,
 body {
   margin: 0;
   font-family: "Inter", sans-serif;
+  color: #2b283a;
 }
 
 header {
@@ -23,4 +30,76 @@ header {
   font-weight: 500;
   color: #ffffff;
   letter-spacing: -1.08px;
+}
+
+main {
+  margin: 45px 10px 28px 10px;
+}
+
+.entry__container {
+  display: grid;
+  grid-template-columns: 1fr 1.5fr;
+  gap: 1.25rem;
+  align-items: center;
+}
+
+.image__container {
+  justify-self: end;
+}
+
+.entry__image {
+  width: 125px;
+  height: 168px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.location__container {
+  display: flex;
+  align-items: center;
+  gap: 0.25rem;
+}
+
+.location__country {
+  font-size: 0.625rem;
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 2px;
+}
+
+.location__marker {
+  width: 7px;
+  height: 9.55px;
+}
+
+.location__link {
+  color: #918e9b;
+  margin-left: 0.5rem;
+  font-size: 0.625rem;
+}
+
+.entry__title {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin: 7px 0 17px 0;
+}
+
+.entry__date {
+  font-size: 0.625rem;
+  font-weight: 700;
+  margin-bottom: 9px;
+}
+
+.entry__description {
+  font-size: 0.625rem;
+  font-weight: 400;
+}
+
+.entry__divider {
+  all: unset; /* Clear default browser styling */
+  display: block;
+  margin: 1.5rem 0;
+  height: 1px;
+  background-color: #f5f5f5;
+  border-radius: 999px; /* Rounded edges */
 }
